--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 
 <body class="body_bg_img">
     <header>
+        <div id="preload"
+            class=" h-100 min-vh-100 w-100 d-flex align-items-center justify-content-center bg-black z-2 position-fixed start-0 top-0">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <img class="mb-3" src="./assets/images/svg/hardos-logo.svg" alt="hardos-logo" class="w-100 max-w-130">
+                <div class="text-uppercase ff-modern fw-400 text24-md lh-29 color-white mb-0 text-nowrap">
+                    hustlin-hardoos
+                </div>
+            </div>
+        </div>
         <!--===============overflow-section============== -->
         <div class="bg-img-black overflow-x-scroll py_14">
             <div class="d-flex justify-content-between gap_62">
@@ -118,21 +127,22 @@
                 <div class="d-flex flex-wrap justify-content-center align-items-center menulist">
                     <div class="border_right_left">
                         <li class="px-24"><a href="#about"
-                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 link">About us</a>
-                            </li>
-                    </div>
-                    <li class="px-24"><a href="#minting"
-                            class="ff-noto fw-400 text16-ss lh-22 color-black mb-0">Minting</a></li>
-                    <div class="border_right_left">
-                        <li class="px-24"><a href="#roadmap"
-                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0">Roadmap</a>
+                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 nav_link">About us</a>
                         </li>
                     </div>
-                    <li class="px-24"><a href="#team" class="ff-noto fw-400 text16-ss lh-22 color-black mb-0">Team</a>
+                    <li class="px-24"><a href="#minting"
+                            class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 nav_link">Minting</a></li>
+                    <div class="border_right_left">
+                        <li class="px-24"><a href="#roadmap"
+                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 nav_link">Roadmap</a>
+                        </li>
+                    </div>
+                    <li class="px-24"><a href="#team"
+                            class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 nav_link">Team</a>
                     </li>
                     <div class="border_right_left">
                         <li class="px-24"><a href="#faq"
-                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0">FAQs</a>
+                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 nav_link">FAQs</a>
                         </li>
                     </div>
                 </div>
@@ -145,7 +155,8 @@
         </div>
         <!-- ==================heading=============== -->
         <div class="my-container">
-            <h1 class="ff-modern fw-400 text157-3xl lh-188 color-black text-nowrap text-center">THE HUSTLIN’ HARDOS.
+            <h1 class="ff-modern fw-400 text157-3xl lh-188 color-black text-nowrap text-center heading_shadaw">THE
+                HUSTLIN’ HARDOS.
             </h1>
         </div>
         <img class="w-100" src="./assets/images/svg/hero-full-img.svg" alt="hero-full-img">
@@ -153,7 +164,8 @@
     <!-- =============breaking-news=========== -->
     <section id="about" class="py_64 bottom_border">
         <div class="my-container">
-            <h2 class="ff-noto fw-400 text72-xl lh-101">“BREAKING NEWS: Hustlin Hardos set to launch the most
+            <h2 class="ff-noto fw-400 text72-xl lh-101 heading_shadaw">“BREAKING NEWS: Hustlin Hardos set to launch the
+                most
                 anticipated NFT project of 2022"
             </h2>
         </div>
@@ -200,7 +212,7 @@
     <section class="py_90 bottom_border">
         <div class="my-container">
             <div class="d-flex justify-content-between">
-                <h3 class="ff-perpetu fw-300 text80-2xl lh-83 color-black">Latest Tweets</h3>
+                <h3 class="ff-perpetu fw-300 text80-2xl lh-83 color-black heading_shadaw">Latest Tweets</h3>
                 <div class="d-md-flex gap-55 d-none">
                     <img class="prev d-flex cursor_pointer" src=" ./assets/images/svg/tweets_prev.svg"
                         alt="tweets_prev">
@@ -211,8 +223,8 @@
     </section>
     <section class="bottom_border">
         <div class="my-container">
-            <div class="responsive tweet_border_right tweet_border_left">
-                <div class="tweets_box tweet_border_right tweet_border_left">
+            <div class="responsive tweet_border_right tweet_border_left1">
+                <div class="tweets_box tweet_border_right tweet_border _left">
                     <div class="max-w-327">
                         <h3 class=" ff-noto fw-600 text36-lg lh-40 color-black">Etiam eget</h3>
                         <div class="d-flex align-items-center gap_11 mb-2">
@@ -240,7 +252,7 @@
                 </div>
                 <div class="tweets_box tweet_border_right tweet_border_left">
                     <div class="max-w-327">
-                        <h3 class=" ff-noto fw-600 text36-lg lh-40 color-black">Etiam eget</h3>
+                        <h3 class=" ff-noto fw-600 text36-lg lh-40 color-black">Venenatis.</h3>
                         <div class="d-flex align-items-center gap_11 mb-2">
                             <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -248,16 +260,11 @@
                                     d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
                                     fill="#55ACEE" />
                             </svg>
-                            <p class="ff-noto fw-400 text14-s lh-19 color-black mb-0">23/02/2022</p>
+                            <p class="ff-noto fw-400 text14-s lh-19 color-black mb-0">22/02/2022</p>
                         </div>
-                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-327 mb-0">Diam tellus arcu, amet
-                            ornare
-                            nulla
-                            ut
-                            scelerisque
-                            et. Cum porta
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-327 mb-0">Tortor dolor
                             ultrices
-                            quam in.</p>
+                            mauris aliquam feugiat amet ultrices facilisi. Venenatis.</p>
                         <button
                             class="ff-noto fw-400 text16 lh-22 color-black bg-transparent border_transprant border_bottom mb-lg-0 mb-3">Read
                             More...
@@ -266,7 +273,7 @@
                 </div>
                 <div class="tweets_box tweet_border_right tweet_border_left">
                     <div class="max-w-327">
-                        <h3 class=" ff-noto fw-600 text36-lg lh-40 color-black">Etiam eget</h3>
+                        <h3 class=" ff-noto fw-600 text36-lg lh-40 color-black text-nowrap">Quis vulputate.</h3>
                         <div class="d-flex align-items-center gap_11 mb-2">
                             <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -274,16 +281,10 @@
                                     d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
                                     fill="#55ACEE" />
                             </svg>
-                            <p class="ff-noto fw-400 text14-s lh-19 color-black mb-0">23/02/2022</p>
+                            <p class="ff-noto fw-400 text14-s lh-19 color-black mb-0">20/02/2022</p>
                         </div>
-                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-327 mb-0">Diam tellus arcu, amet
-                            ornare
-                            nulla
-                            ut
-                            scelerisque
-                            et. Cum porta
-                            ultrices
-                            quam in.</p>
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-327 mb-0">Vestibulum at gravida amet
+                            ullamcorper a ipsum laoreet tortor. Et tortor vel arcu ac.</p>
                         <button
                             class="ff-noto fw-400 text16 lh-22 color-black bg-transparent border_transprant border_bottom mb-lg-0 mb-3">Read
                             More...
@@ -730,9 +731,15 @@
         </div>
     </section>
     <!-- =============last=========== -->
-    <section class="py_32">
+    <footer class="py_32">
         <h6 class="ff-noto fw-400 text16-ss lh-22 color-black text-center mb-0">© Hustlin' Hardos 2022</h6>
-    </section>
+        <div class="topBtn d-flex align-items-center justify-content-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="51" viewBox="0 0 50 51" fill="none">
+                <path d="M27.0835 25.5V42.1667H22.9168V25.5H8.3335L25.0002 8.83337L41.6668 25.5H27.0835Z"
+                    fill="white" />
+            </svg>
+        </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
